# spider

./: .gitignore  LICENSE  README.md  TASK_GENERATION_IMPLEMENTATION.md  clear_gpu.sh  debug_fireworks_teacher_alignment.pkl  debug_training_shapes.txt  debug_truncation.txt  error.txt  gh_ssh  gh_ssh.pub  install.sh  logging_exp.yaml  output.txt  pyproject.toml  run_task_gen.py  setup_pr_mirror.sh  tasks_1308bb84-5ac5-4927-950f-ddba81a59184.jsonl  tasks_2989fe40-358f-4d51-bdfd-8f1625a08b66.jsonl  tasks_32727f1b-ae8c-4741-85d0-325c1367709e.jsonl  tasks_50727a82-3a6e-47db-82f3-1fcf6c62d8e7.jsonl  tasks_5507cb2b-f96f-42aa-aaf4-924930aaaec3.jsonl  tasks_7a960e44-a2e3-4b34-8b33-90f02cea6a8d.jsonl  tasks_8de9d601-e584-47e1-9440-9ec281b97dd2.jsonl  tasks_a14d3288-80b7-4de3-b6f0-bea336f60b33.jsonl  tasks_b2a7a146-d598-4365-a6b2-994bb967fe76.jsonl  tasks_bcdab021-76db-4f99-9893-67a9e1030baf.jsonl  uv.lock.ignore  uv.lock.why
config/: deepspeed_config_zer2.json  deepspeed_zero3_sp.json  generate_gaia_search.yaml  generate_mcp_finance.yaml  generate_mcp_jira.yaml  generate_multiturn_hotpotqa.yaml  generate_tool_search_nemo.yaml  generate_tulu_precise_if.yaml  open_thoughts_3.yaml  test-local.yaml  test-remote-online-distill.yaml  test-remote-processor.yaml  test-remote.yaml  train_if_stage_2_on_policy.yaml  train_on_policy_swe.yaml  train_on_policy_swe_accelerate.yaml  train_on_policy_swe_vllm_accelerate.yaml  train_on_policy_tool_search_nemo.yaml  web_search.yaml
config/swe/: README.md  config-reference.yaml  custom-profile-example.yaml  example-openai-config.yaml  example-vllm-config.yaml  minimal-example.yaml  my-swe-config.yaml  openhands-config.yaml  openhands-example.yaml  pr-mirror-example.yaml  spider-openhands-job.yaml  swebench-example.yaml  swesmith-example.yaml  task-generation-example.yaml  vllm-example.yaml
debug_trajectories/trajectory_batch0/: id_0.json  id_1.json  id_2.json  id_3.json  id_4.json  id_5.json  id_6.json  id_7.json  idunknown.json
docs/: trajectory_format.md
examples/: openhands_trajectory_generation.py  test_swebench_support.py
logs/build_images/env/python__typing_extensions.479dae13/: Dockerfile  setup_env.sh
scripts/: analyze_swe_smith.py  generate_gaia_search.py  generate_mcp_expedia.py  generate_mcp_finance.py  generate_mcp_jira.py  generate_mcp_zendesk.py  generate_multiturn_hotpotqa.py  generate_open_thoughts_3.py  generate_tool_search_nemo.py  generate_tulu_precise_if.py  inspect_loss.py  inspect_rollouts.py  inspect_tool_exec.py  inspect_vllm_calls.py  push_lora_to_hub.py  push_openhands_traj_dataset.py  test-remote-online-distill.py  test-remote-processor.py  test-template-kl.py  test-tinker-tool-loop.py  test_local_client.py  test_remote_client.py  train_if_stage1_sft.py  train_if_stage_1_sft.py  train_if_stage_2_on_policy.py  train_on_policy_precise_if.py  train_on_policy_swe.py  train_on_policy_swe_accelerate.py  train_on_policy_tool_search_nemo.py  train_sft_first_phase.py  web_search.py
server/: api.py  api_key_manager.py  app.py  events.py  executor.py  hf_upload.py  metrics.py  on_policy.py  on_policy_accelerate.py  on_policy_accelerate_utils.py  on_policy_utils.py  on_policy_vllm_rollouts.py  processor_service.py  runtime_env.py  sources.py  vllm_parsers.py  weight_synchronizer.py  writers.py
server/backends/: base.py  factory.py  openai_backend.py  openrouter_backend.py  vllm_backend.py
server/backends/templates/: qwen3_no_dummy_think.jinja
server/lib/tinker-cookbook/tinker_cookbook/: tokenizer_utils.py
server/lib/tinker-cookbook/tinker_cookbook/distillation/: datasets.py  train_on_policy.py
server/lib/tinker-cookbook/tinker_cookbook/rl/: problem_env.py
server/scaffolds/: INTEGRATION.md  README.md  SUMMARY.md  __init__.py  base.py  cli.py  openhands_wrapper.py
server/task_generation/: __init__.py  format_converter.py  swesmith_integration.py
spider/: __init__.py  cli.py  client.py  config.py  processor_bundle.py
spider/backends/: __init__.py  base.py
spider/sources/: __init__.py  base.py  filesystem.py
tinker-data/: client.py  config.py
tinker-data/backends/: factory.py  local_vllm.py
tinker-data/output/: writers.py
tinker-data/pipeline/: __init__.py  generation.py
tinker-data/sources/: __init__.py  filesystem.py  hf_dataset.py
trajectories/collinear-ai__TEMP_spider_openhands_scaffold_test-train/CodeActAgent/gpt-4o_maxiter_50/: metadata.json
vllm_call_logs/: vllm_call_input_20260125_001816_184211.pkl  vllm_call_input_20260125_001828_126395.pkl  vllm_call_input_20260125_001832_249599.pkl  vllm_call_input_20260125_001836_184278.pkl  vllm_call_input_20260125_001836_187517.pkl  vllm_call_input_20260125_001836_191183.pkl  vllm_call_input_20260125_001836_197997.pkl  vllm_call_input_20260125_001836_198239.pkl
workloads/mcp_support/: README.md  __init__.py  generate_model_prompts.py  generate_prompts.py  generate_tool_calls.py  launcher.py  public_readonly_servers.py  run.sh  servers.md  stdio_proxy.py  tool_schemas.py
workloads/mcp_support/prompts/: genq_from_tools_single_server_multi_tools.md
workloads/swe_rebench_openhands/: container_manager.py  runner.py  runner_accelerate.py  schemas.json  tool_registry.py
workloads/swe_rebench_openhands/prompts/: system.txt  user.txt
workspace_accelerate/: metadata.json
workspace_accelerate/training/lora_checkpoints/step_0/: README.md
