[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spider"
version = "0.0.1"
description = "Lightweight synthetic data generation client"
readme = "README.md"
requires-python = ">=3.11,<=3.11.14"
dependencies = [
    "datasets>=4.5.0",
    "deepspeed>=0.18.4",
    "mpi4py>=4.1.1",
    "pydantic",
    "pyYAML",
    "vllm>=0.13.0",
]
authors = [
    { name = "Muyu He", email = "muyu@collinear.ai" }
]
license = { file = "LICENSE" }
keywords = ["llm", "ml", "data"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.optional-dependencies]
client = [
    "httpx",
    "requests",
    "typer",
    "rich",
    "openai",
    "tqdm"
]
server = [
    "datasets",
    "pyarrow",
    "pandas",
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
    "vllm>=0.10.2",
    "huggingface_hub",
    "chz",
    "numpy",
    "termcolor",
    "tinker",
    "torch",
    "transformers",
    "accelerate>=0.25.0",
    "peft>=0.7.0",
    "blobfile",
    "inspect-ai",
    "anyio",
    "pylatexenc",
    "sympy",
    "textarena",
    "math-verify",
    "scipy",
    "openai",
    "tqdm",
    "httpx",
    "wandb",
]
all = [
    "httpx",
    "requests",
    "typer",
    "rich",
    "datasets",
    "pyarrow",
    "pandas",
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
    "vllm>=0.10.2",
    "huggingface_hub",
    "chz",
    "numpy",
    "termcolor",
    "tinker",
    "torch",
    "transformers",
    "accelerate>=0.25.0",
    "peft>=0.7.0",
    "blobfile",
    "inspect-ai",
    "anyio",
    "pylatexenc",
    "sympy",
    "textarena",
    "math-verify",
    "scipy",
    "openai",
    "tqdm",
    "httpx",
    "wandb",
]

[project.scripts]
spider = "spider.cli:app"

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.10"
strict = true
plugins = ["pydantic.mypy"]

[tool.hatch.build.targets.sdist]
include = ["spider", "README.md", "LICENSE", "pyproject.toml"]

[tool.hatch.build.targets.wheel]
packages = [
    "spider",
    "server",
    "server/lib/tinker-cookbook/tinker-cookbook",
]
